--- a/assets/about.html
+++ b/assets/about.html
@@ -24,6 +24,8 @@
 
     <h3>Recent release history</h3>
       <ul>
+      	<li><b>2.0.1</b> Translation to Chinese and traditional Chinese. 
+      	Courtesy of <a href="http://bbs.goapk.com">bbs.goapk.com</a></li>
         <li><b>2.0</b> More options to specify what do you want block. Before only contacts
         previously defined, now block all, block defined contacts, block unknown, and
         block unknown and defined contacts.</li>
@@ -63,8 +65,8 @@
     
     <h3>Contact</h3>
     <p>You can contact with me at my <a href="mailto:cesar.valiente@gmail.com">email</a>  
-    and say me any suggestion, critic, new features that you think could be good, 
-    bugs, etc. I promise answer and work on it!! ;-)     
+    and tell me any suggestion, review, new features that you think could be good, 
+    bugs, etc. I promise answer and work on it!!     
     </p>
   </body>
 </html>
