Several changes: - Created new buttons to use along all the app. - Created new toggle buttons to use along all the app. - Included different assets, drawables and files used to customize the action bar. - Changes in several layouts using also style and dimen files. - Added GPL headers to the new files. - Changed the help and about me files with new info. - Changed CHANGES, and NOTICE files including new and updated info.

--- a/quitesleep_v3_branch/assets/about.html
+++ b/quitesleep_v3_branch/assets/about.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      QuiteSleep (v2.0)
+      QuiteSleep (v3.0)
     </h2>
     <p>
       <small>by Cesar Valiente Gordo</small>
@@ -11,7 +11,7 @@
         unknown, all, or mix between them in a predefined hour and day interval.
         Provides feedback to the caller by email or sms.     
        
-        QuiteSleep is only for versions 2.0 and above.
+        QuiteSleep is only for Android versions 2.0 and above.
     </p>
 
     <h3>Information</h3>
@@ -24,6 +24,10 @@
 
     <h3>Recent release history</h3>
       <ul>
+      	<li><b>3.0</b> UI changes, now QuiteSleep is adapted to the new Android design patterns
+      	which started in Android 3.0.
+      	Now QuiteSleep uses the ActionBar, ViewPager, Fragments and new and customized buttons. </li>
+      	<li><b>2.3</b> Changes in the contact list, now the user can move fast using the right slide index</li>
       	<li><b>2.0.1</b> Translation to Chinese and traditional Chinese. 
       	Courtesy of <a href="http://bbs.goapk.com">bbs.goapk.com</a></li>
         <li><b>2.0</b> More options to specify what do you want block. Before only contacts
@@ -64,9 +68,9 @@
     </p>
     
     <h3>Contact</h3>
-    <p>You can contact with me at my <a href="mailto:cesar.valiente@gmail.com">email</a>  
-    and tell me any suggestion, review, new features that you think could be good, 
-    bugs, etc. I promise answer and work on it!!     
+    <p>You can contact me at my <a href="mailto:cesar.valiente@gmail.com">email</a>  
+    and tell me any suggestion, review, new features you think could be good, 
+    bugs, etc. I promise answer you and work on it!!     
     </p>
   </body>
 </html>
