--- a/quitesleep_v3_branch/assets/helpContacts.html
+++ b/quitesleep_v3_branch/assets/helpContacts.html
@@ -1,10 +1,8 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      QuiteSleep (v2.0)
-    </h2>     
-    <p></p>
-    <h3>Contacts help</h3>
+      Contacts help
+    </h2>         
     <p>
       Help about general functionality of the contacts tab options.
     </p>
