--- a/quitesleep_v3_branch/assets/helpLog.html
+++ b/quitesleep_v3_branch/assets/helpLog.html
@@ -1,11 +1,9 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      QuiteSleep (v2.0)
+      Log help
     </h2>      
-	<p></p>
-    <h3>Log help</h3>
-    <p>
+	<p>
       Help about general functionality of the Log tab options. 
     </p>
 
