--- a/quitesleep_v3_branch/assets/helpSchedule.html
+++ b/quitesleep_v3_branch/assets/helpSchedule.html
@@ -1,10 +1,8 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      QuiteSleep (v2.0)
+      Schedule help
     </h2>      
-    <p></p>
-    <h3>Schedule help</h3>
     <p>
       Help about general functionality of the schedule tab options.
     </p>
