--- a/quitesleep_v3_branch/assets/helpSettings.html
+++ b/quitesleep_v3_branch/assets/helpSettings.html
@@ -1,10 +1,8 @@
 <html>
   <body>
     <h2 style="margin-bottom: -14px">
-      QuiteSleep (v2.0)
+      Settings help
     </h2>      
-    <p></p>
-    <h3>Settings help</h3>
     <p>
       Help about general functionality of settings tab options.
     </p>
