Deleted db4o 7.4 and added the new db4o 8.1 which works in the latest Android releases. Changed the Manifest to upload a new apk to the market

--- a/quitesleep_v3_branch/assets/helpSettings.html
+++ b/quitesleep_v3_branch/assets/helpSettings.html
@@ -73,7 +73,7 @@
         This feature have been proved in Nexus One with Android 2.0 to 2.2 and runs very well.
         </ol>
         <li><h4>Start/stop QuiteSleep service</h4</li>
-        With this button, you will can switch on/off QuiteSleep service, so when you want that
+        With this button, you will able to switch on/off QuiteSleep service, so when you want that
         QuiteSleep must be run, switch on this button (a notification will appear on the status
         bar) or switch off QuiteSleep service (then the notification on status bar will be disappear).
       </ul>     
